* Changed en_US to UTF-8
* Changed with of add and edit html blob pages
* Changed all template lists to be ordered by template name (#000038)
* Changed edit html blob so that is only modifies the timestamps of pages it 
is actually used on.
* Changed all user lists to be ordered by username (#000039)
* Changed add content so that the alias is based off of menutext instead of
the title
* Fixed add and edit content pages so that the alias field is more intelligent
when auto_alias_content is on (#000043)
* Fixed login to redirect back to originally requested link
* Fixed stupid encoding issue with cms_htmlentities
* Fixed htmlarea not loading due to a notice level error (#0000034)
* Fixed a few problems with htmlarea's fullscreen not working in Internet 
Explorer
* Fixed htmlblob to fill the width of the screen (#0000037)
* Updated Smarty to 2.6.6 (jope)

Version 0.7.1 -- Wed Oct 26 2004
-----------------

* Added check for session functions to install script (#000004)
* Added newline parsing to the comments module (#000011)
* Added encoding override on templates.  Fixed bugs with
htmlentities. (#000002, #000006)
* Added missing CSS to the horizontal menu (#000008)
* Added check to lang/addline.sh to make sure line doesn't already
exist (#000017)
* Added German translation (Piratos)
* Added Czech translation (peca)
* Added new div and swaptitledate parameter to News module
* Fixed a bug when hitting cancel on the login page (#000029)
* Fixed bug when not saving all fields when adding a user
* Fixed html blobs so that they can  handle smarty functions inside of them.
* Fixed email in add/edit user to accept 255 characters (#000003)
* Fixed htmlblob NOTICE level messages (#000005)
* Fixed delete confirmation text in file management (#000012)
* Fixed java syntax highlighting to submit if advnaced wasn't
expanded (#0000016)
* Removed most references to BBCode without breaking backwards
compatibility (#000013)
* Removed a rogue div from the Comments module (#000010)